--- a/techcon_website/contact.html
+++ b/techcon_website/contact.html
@@ -25,7 +25,7 @@
     <section>
       <h2>Get in Touch</h2>
       <p>Email us at: 
-        <a href="mailto:techcon@gmail.com">techcon@gmail.com</a>
+        <a href="mailto:email@example.com">email@example.com</a>
       </p>
 
       <h3>Follow Us</h3>
