--- a/techcon_website/schedule.html
+++ b/techcon_website/schedule.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Schedule - TechCon 2024</title>
+  <meta charset="UTF-8">
+  <title>Schedule - TechCon 2024</title>
 </head>
 <body>
 
@@ -22,62 +21,67 @@
 
 
   <main>
-    <table border="1">
-      <caption>Detailed Schedule of Events for TechCon 2024</caption>
-      <thead>
-        <tr>
-          <th scope="col">Time</th>
-          <th scope="col">Session</th>
-          <th scope="col">Speaker</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <td>09:00 AM - 09:30 AM</td>
-          <td>Opening Keynote: The Future of Technology</td>
-          <td>Dr. Jane Doe</td>
-        </tr>
-        <tr>
-          <td>09:45 AM - 10:30 AM</td>
-          <td>Cloud Computing Trends</td>
-          <td>John Smith</td>
-        </tr>
-        <tr>
-          <td>10:45 AM - 11:30 AM</td>
-          <td>AI and Ethics: Balancing Innovation and Responsibility</td>
-          <td>Amira Khan</td>
-        </tr>
-        <tr>
-          <td>11:45 AM - 12:30 PM</td>
-          <td>Cybersecurity in 2024</td>
-          <td>Michael Brown</td>
-        </tr>
-        <tr>
-          <td>12:30 PM - 01:30 PM</td>
-          <td>Lunch Break</td>
-          <td>-</td>
-        </tr>
-        <tr>
-          <td>01:30 PM - 02:15 PM</td>
-          <td>Building Scalable Web Apps</td>
-          <td>Sophia Lee</td>
-        </tr>
-        <tr>
-          <td>02:30 PM - 03:15 PM</td>
-          <td>Data Science for Real-World Problems</td>
-          <td>David Chen</td>
-        </tr>
-        <tr>
-          <td>03:30 PM - 04:00 PM</td>
-          <td>Closing Remarks</td>
-          <td>Conference Committee</td>
-        </tr>
-      </tbody>
-    </table>
+    <section>
+      <h2>Conference Schedule</h2>
+      <table border="1">
+        <caption>Detailed Schedule of Events for TechCon 2024</caption>
+        <thead>
+          <tr>
+            <th scope="col">Time</th>
+            <th scope="col">Session</th>
+            <th scope="col">Speaker</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>09:00 AM - 09:30 AM</td>
+            <td>Opening Keynote: The Future of Technology</td>
+            <td>Dr. Jane Doe</td>
+          </tr>
+          <tr>
+            <td>09:45 AM - 10:30 AM</td>
+            <td>Cloud Computing Trends</td>
+            <td>John Smith</td>
+          </tr>
+          <tr>
+            <td>10:45 AM - 11:30 AM</td>
+            <td>AI and Ethics: Balancing Innovation and Responsibility</td>
+            <td>Amira Khan</td>
+          </tr>
+          <tr>
+            <td>11:45 AM - 12:30 PM</td>
+            <td>Cybersecurity in 2024</td>
+            <td>Michael Brown</td>
+          </tr>
+          <tr>
+            <td>12:30 PM - 01:30 PM</td>
+            <td>Lunch Break</td>
+            <td>-</td>
+          </tr>
+          <tr>
+            <td>01:30 PM - 02:15 PM</td>
+            <td>Building Scalable Web Apps</td>
+            <td>Sophia Lee</td>
+          </tr>
+          <tr>
+            <td>02:30 PM - 03:15 PM</td>
+            <td>Data Science for Real-World Problems</td>
+            <td>David Chen</td>
+          </tr>
+          <tr>
+            <td>03:30 PM - 04:00 PM</td>
+            <td>Closing Remarks</td>
+            <td>Conference Committee</td>
+          </tr>
+        </tbody>
+      </table>
+    </section>
   </main>
+
 
   <footer>
     <p>&copy; 2024 TechCon. All rights reserved. Copyright.</p>
   </footer>
+
 </body>
 </html>
