--- a/techcon_website/schedule.html
+++ b/techcon_website/schedule.html
@@ -6,7 +6,6 @@
 </head>
 <body>
 
-
   <header>
     <h1>Schedule for TechCon 2024</h1>
     <nav>
@@ -19,11 +18,10 @@
     </nav>
   </header>
 
-
   <main>
     <section>
       <h2>Conference Schedule</h2>
-      <table border="1">
+      <table>
         <caption>Detailed Schedule of Events for TechCon 2024</caption>
         <thead>
           <tr>
@@ -78,9 +76,8 @@
     </section>
   </main>
 
-
   <footer>
-    <p>&copy; 2024 TechCon. All rights reserved. Copyright.</p>
+    <p>copyright 2024 TechCon. All rights reserved.</p>
   </footer>
 
 </body>
